mlp modules and vae factory updates
mlp:
+added hidden layer dim parameter

vae factory:
+decoupled encoded features to mu/std split from the reparametrization process
+features_head is now responsible for the features to mu/std split
-linear layer for latent2hidden removed from the reparametrization process
-reshape removed (now decoder is responsible for receiving latent_dim as features)

interpolate latent:
+todo for removing reshape is now consider as done
- removed the linear_to_dec layer (see vae updates above)

--- a/moai/conf/model/modules/decoder/mlp_dec.yaml
+++ b/moai/conf/model/modules/decoder/mlp_dec.yaml
@@ -4,6 +4,7 @@ _target_: moai.modules.lightning.MLP
 
 configuration:
   in_features: ???
+  hidden_features: ???
   out_features: ???
   blocks: ???
   linear:
