--- a/moai/conf/model/supervision/loss/geometric/rotation_geodesic.yaml
+++ b/moai/conf/model/supervision/loss/geometric/rotation_geodesic.yaml
@@ -1,3 +1,3 @@
 # @package model.supervision.losses._name_
 
-_target_: moai.supervision.losses.geometric.RotationGeodesic
+_target_: moai.supervision.losses.geometric.RotationMatrixGeodesic
