clearml vector + vae related fixes
+added vector visualization for clearml
+added activation parameters option in mlp module
+updated interpolate latent to work with the more generic generation postprocessing graph

--- a/moai/conf/model/modules/decoder/mlp.yaml
+++ b/moai/conf/model/modules/decoder/mlp.yaml
@@ -11,7 +11,11 @@ configuration:
     type: ???
     activation:
       type: ???
+      parameters:
+        inplace: true
   prediction:
     type: ???
     activation:
       type: ???
+      parameters:
+        inplace: true
