--- a/moai/conf/examples/train_Pano3D/options.yaml
+++ b/moai/conf/examples/train_Pano3D/options.yaml
@@ -24,25 +24,25 @@ trainer:
 logging:
   name: ${experiment.name}
   loggers:
-    visdom:
-      name: ${experiment.name}
-      ip: ${experiment.visdom_ip}
-      clear_window: False
+    # visdom:
+    #   name: ${experiment.name}
+    #   ip: ${experiment.visdom_ip}
+    #   clear_window: False
     tabular:
       name: ${experiment.name}
 
 visualization:
   batch_interval: 5
   visualizers:
-    image2d: # visdom
-      name: ${experiment.name}
-      ip: ${experiment.visdom_ip}
-      image: [color, depth, depth_t_0]
-      type: [color, color, color]
-      colormap: [none, turbo, turbo]
-      transform: [none, minmax, minmax]
-    # image2d: # clearml      
+    # image2d: # visdom
+    #   name: ${experiment.name}
+    #   ip: ${experiment.visdom_ip}
     #   image: [color, depth, depth_t_0]
     #   type: [color, color, color]
     #   colormap: [none, turbo, turbo]
     #   transform: [none, minmax, minmax]
+    image2d: # clearml      
+      image: [color, depth, depth_t_0]
+      type: [color, color, color]
+      colormap: [none, turbo, turbo]
+      transform: [none, minmax, minmax]
