--- a/moai/conf/examples/play_EHF/dataset_showcase.yaml
+++ b/moai/conf/examples/play_EHF/dataset_showcase.yaml
@@ -7,6 +7,9 @@ defaults:
   - engine: engine
   - engine/play: lightning
 
+  # - engine/export: collection
+  # - engine/export/exporter: image2d
+
   - engine/visualization: collection
   - engine/visualization/visdom: pose2d
   - engine/visualization/visdom: blend2d
