--- a/moai/conf/model/monads/geometry/rotation/conversion.yaml
+++ b/moai/conf/model/monads/geometry/rotation/conversion.yaml
@@ -2,7 +2,8 @@
 
 _target_: moai.monads.geometry.rotations.ConvertRotation
 src: ??? # from representation 
-tgt: ??? # to representation 
+tgt: ??? # to representation
+backend: ???
 
 # representations use the following alias names:
 #   rotation matrix \in ['R', 'rot', '3x3', 'rotation', 'matrix', 'rotation_matrix', 'rotmat']
