--- a/moai/conf/examples/play_EHF/options.yaml
+++ b/moai/conf/examples/play_EHF/options.yaml
@@ -12,7 +12,7 @@ visualization:
     blend2d:
       name: ${experiment.name}
       ip: ${experiment.visdom_ip}
-      left: [color_down_x2] # [color_down_x2] # [color]
+      left: [color] # [color_down_x2] # [color_down_x2] # [color]
       right: [silhouette]
       blending: 0.65
       colormap: [viridis_r]
@@ -54,3 +54,15 @@ visualization:
       scale: 1.0
       focal_length: [1498.22426237, 1498.22426237]
       principal_point: [790.263706, 578.90334]
+
+# export:
+#   batch_interval: 1
+#   exporters:
+#     image2d:
+#       path: .
+#       type: [color]
+#       colormap: [none]
+#       transform: [none]
+#       mode: all
+#       image: [silhouette]
+#       extension: [png]
