update gaussian reconstruction
safe division in gaussian reconstruction

--- a/moai/conf/model/monads/distribution/reconstruction/isotropic_gaussian.yaml
+++ b/moai/conf/model/monads/distribution/reconstruction/isotropic_gaussian.yaml
@@ -5,3 +5,4 @@ std: 1.5 # float, in % of # pixels of the grid's diagonal
 normalize: true
 scale: false
 grid_type: ndc # ndc, coord, norm
+eps: 1e-8
