--- a/moai/conf/model/validation/metric/generation/fid.yaml
+++ b/moai/conf/model/validation/metric/generation/fid.yaml
@@ -1,3 +1,3 @@
 # @package model.generation.validation.metrics._name_
 
-_target_: moai.generation.validation.metrics.Diversity
+_target_: moai.validation.metrics.generation.FID
