--- a/moai/conf/model/monads/generation/tensor/random.yaml
+++ b/moai/conf/model/monads/generation/tensor/random.yaml
@@ -4,4 +4,4 @@ _target_: moai.monads.generation.tensor.Random
 shape: ???
 mode: unit # one of [unit, normal]
 scale: 1.0
-num_samples: 0
+includes_batch: false # whether shape includes the batch dim
