--- a/moai/conf/engine/export/exporter/npz.yaml
+++ b/moai/conf/engine/export/exporter/npz.yaml
@@ -1,7 +1,7 @@
 # @package export.exporters._name_
 
 _target_: moai.export.local.Npz
-mode: all # [single, combined]
+mode: all # [all, append]
 keys: ???
 path: ???
 combined: False
