--- a/.github/workflows/publish_serve.yaml
+++ b/.github/workflows/publish_serve.yaml
@@ -5,7 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: serve:pt112-cu113
+  IMAGE_NAME: serve
 
 jobs:
   build-and-push-image:
@@ -29,6 +29,8 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/moai/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=pt112-cu113
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
       # It uses the `tags` and `labels` parameters to tag and label the image with the output from the "meta" step.
@@ -36,7 +38,7 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
-          file: /docker/serve/pt112_cu113/Dockerfile
+          file: /docker/serve/pt112-cu113/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
