--- a/.github/workflows/publish_serve.yaml
+++ b/.github/workflows/publish_serve.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/ai-in-motion/moai/${{ env.IMAGE_NAME }}
-          tags: |
+          tags: | # https://github.com/docker/metadata-action#tags-input
             type=raw,enable=true,priority=200,prefix=,suffix=,value=pt112-cu113
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
