--- a/moai/conf/model/monads/geometry/rotation/axisangle.yaml
+++ b/moai/conf/model/monads/geometry/rotation/axisangle.yaml
@@ -1,4 +1,4 @@
 # @package model.monads._name_
 
-_target_: moai.monads.geometry.rotations.AngleAxis
+_target_: moai.monads.geometry.rotations.AxisAngle
 to: ???
