--- a/docker/serve/pt112-cu113/Dockerfile
+++ b/docker/serve/pt112-cu113/Dockerfile
@@ -5,6 +5,7 @@ COPY . /moai
 RUN apt-get update \
     && apt-get install -y -qq \
     zip \
+    libgl1 \
     openjdk-11-jre-headless \
     && rm -rf /var/lib/apt/lists/*
 
