--- a/.github/workflows/publish_serve_azure.yaml
+++ b/.github/workflows/publish_serve_azure.yaml
@@ -36,7 +36,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/ai-in-motion/moai/${{ env.NAME }}
+          images: ${{ env.REGISTRY }}/moverseai/moai/${{ env.NAME }}
           tags: | # https://github.com/docker/metadata-action#tags-input
             type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ env.VERSION }}-pt112-cu113
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
@@ -54,6 +54,6 @@ jobs:
             org.opencontainers.image.created=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
             org.opencontainers.image.revision=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
             org.opencontainers.image.version=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-            com.github.ai-in-motion.moai.sha=${{ github.sha }}
-            com.github.ai-in-motion.moai.branch=${{ github.ref_name }}
+            com.github.moverseai.moai.sha=${{ github.sha }}
+            com.github.moverseai.moai.branch=${{ github.ref_name }}
           
