--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 omegaconf==2.0.2            #TODO: update
 hydra-core==1.0.3           #TODO: update
 hydra-colorlog==1.0.0
-pytorch-lightning==1.5.1    #TODO: update
-kornia==0.6.3
+pytorch-lightning==2.2.1    #TODO: update
+kornia==0.7.1
 visdom==0.1.8.9
 hiplot==0.1.20              #TODO: update
 opencv-python
@@ -21,5 +21,4 @@ roma==1.4.0
 trimesh
 clearml==1.6.4
 scenepic==1.0.10
-
-# importlib-resources if py>3,7
+importlib-resources # if py>3,7
